# MassiveClicks

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  ubm_indexing.py
click_models/: base.cu  base.cuh  ccm.cu  ccm.cuh  common.cu  common.cuh  dbn.cu  dbn.cuh  evaluation.cpp  evaluation.h  factor.cu  factor.cuh  param.cu  param.cuh  pbm.cu  pbm.cuh  template.cu  template.cuh  ubm.cu  ubm.cuh
data/: dataset.cpp  dataset.h  search.cu  search.cuh
experiments/: data_read.py  plot_roofline_nsight.py  plot_utilization.py
experiments/utilization/: A4000_model0_10M_itr50.csv  A4000_model0_25M_itr50.csv  A4000_model1_25M_itr50.csv  A4000_model2_10M_itr50.csv  A4000_model2_25M_itr50.csv  A6000_model0_10M_itr50.csv  A6000_model1_10M_itr50.csv  A6000_model3_10M_itr50.csv  TitanX-Pascal_model1_10M_itr50.csv  TitanX_model0_10M_itr50.csv
measurements/: data_read.py  line_plot_speedup.py  line_plot_training_time.py
measurements/utilization/: A4000_model1_10M_itr50.csv  A4000_model3_10M_itr50.csv  A4000_model3_25M_itr50.csv  A6000_model2_10M_itr50.csv  TitanX-Pascal_model0_10M_itr50.csv  TitanX-Pascal_model2_10M_itr50.csv  TitanX-Pascal_model3_10M_itr50.csv  TitanX_model1_10M_itr50.csv  TitanX_model2_10M_itr50.csv  TitanX_model3_10M_itr50.csv
parallel_em/: communicator.cpp  communicator.h  kernel.cu  kernel.cuh  parallel_em.cu  parallel_em.cuh
utils/: cuda_utils.cu  cuda_utils.cuh  definitions.h  macros.cpp  macros.cuh  timer.cpp  timer.h  types.h  utility_functions.cpp  utility_functions.h  utils.cu  utils.cuh
(+518 files in other folders)
